package timmax.minesweeper.model;

public enum GameStatus {
    GAME,
    VICTORY,
    DEFEAT
}