package timmax.tilegameenginejfx;

import timmax.basetilemodel.ViewInterface;

public interface ViewJfxInterface extends ViewInterface {
}